--- a/src/main/resources/view/LauncherConfiguration.fxml
+++ b/src/main/resources/view/LauncherConfiguration.fxml
@@ -6,9 +6,13 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DialogPane?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <DialogPane fx:id="dialogPane" expanded="true" minHeight="-Infinity" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.LauncherConfigurationController">
    <buttonTypes>
@@ -31,12 +35,31 @@
             <CheckBox fx:id="checkBox" mnemonicParsing="false" text="%checkbox.checkupdatesagain" GridPane.columnSpan="2" />
             <CheckBox fx:id="checkBoxBetaTester" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" text="%checkbox.betatester" GridPane.columnSpan="2" GridPane.rowIndex="1" />
             <Label fx:id="label" text="%label.restoreversion" GridPane.rowIndex="2" />
-            <ChoiceBox fx:id="choiceBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <ChoiceBox fx:id="choiceBox" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="%label.restartapplication" textFill="RED" GridPane.columnSpan="2" GridPane.rowIndex="3" />
          </children>
          <padding>
-            <Insets left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="20.0" right="20.0" top="20.0" />
          </padding>
       </GridPane>
    </content>
+   <header>
+      <HBox alignment="CENTER_LEFT" spacing="20.0">
+         <children>
+            <ImageView fitHeight="70.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/cog-solid.png" />
+               </image>
+            </ImageView>
+            <Label alignment="CENTER" text="%label.launcherconfiguration">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+   </header>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </DialogPane>
