--- a/src/main/resources/view/clustering/Classic.fxml
+++ b/src/main/resources/view/clustering/Classic.fxml
@@ -12,8 +12,6 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -175,89 +173,9 @@
                   </Tab>
               </tabs>
             </TabPane>
-            <TabPane maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="300.0" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab text="%clustering.table">
-                     <content>
-                        <BorderPane prefHeight="200.0" prefWidth="200.0">
-                           <center>
-                              <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                                 <columns>
-                                    <TableColumn fx:id="columnImage" editable="false" maxWidth="54.0" minWidth="54.0" prefWidth="54.0" resizable="false" sortable="false" />
-                                    <TableColumn fx:id="columnName" editable="false" text="%clustering.fullname" />
-                                    <TableColumn fx:id="columnCluster" editable="false" text="%clustering.cluster" />
-                                 </columns>
-                                 <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                 </columnResizePolicy></TableView>
-                           </center>
-                           <top>
-                              <GridPane hgap="10.0" BorderPane.alignment="CENTER">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <CheckComboBox fx:id="checkComboBoxCluster" title="%clustering.clusters" />
-                                    <CheckBox fx:id="checkBoxExportGrades" alignment="CENTER_RIGHT" mnemonicParsing="false" text="%clustering.exportGrades" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-                                    <Button fx:id="buttonExport" disable="true" mnemonicParsing="false" onAction="#exportTable" text="%text.exportcsv" GridPane.columnIndex="2" />
-                                 </children>
-                                 <BorderPane.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </BorderPane.margin>
-                              </GridPane>
-                           </top>
-                        </BorderPane>
-                     </content>
-                </Tab>
-                <Tab text="%clustering.label">
-                     <content>
-                        <BorderPane>
-                           <center>
-                              <PropertySheet fx:id="propertySheetLabel" modeSwitcherVisible="false" searchBoxVisible="false" BorderPane.alignment="CENTER">
-                                 <BorderPane.margin>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </BorderPane.margin></PropertySheet>
-                           </center>
-                           <bottom>
-                              <Button fx:id="buttonLabel" mnemonicParsing="false" text="%clustering.label" BorderPane.alignment="CENTER">
-                                 <BorderPane.margin>
-                                    <Insets bottom="20.0" />
-                                 </BorderPane.margin>
-                              </Button>
-                           </bottom>
-                        </BorderPane>
-                     </content>
-                </Tab>
-                  <Tab text="%clustering.manageLabels">
-                     <content>
-                        <BorderPane prefHeight="200.0" prefWidth="200.0">
-                           <center>
-                              <ListView fx:id="listViewLabels" editable="true" BorderPane.alignment="CENTER">
-                                 <BorderPane.margin>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </BorderPane.margin>
-								 <placeholder>
-									<Label text="%clustering.noLabels" />
-								</placeholder>
-                              </ListView>
-                           </center>
-                           <bottom>
-                              <Button mnemonicParsing="false" onAction="#deleteLabels" text="%clustering.removeLabels" BorderPane.alignment="CENTER">
-                                 <BorderPane.margin>
-                                    <Insets bottom="20.0" />
-                                 </BorderPane.margin>
-                              </Button>
-                           </bottom>
-                        </BorderPane>
-                     </content>
-                  </Tab>
-              </tabs>
-            </TabPane>
+            
+            <fx:include fx:id="clusteringTable" source="Table.fxml" />
+            
          </items>
       </SplitPane>
    </center>
