--- a/src/main/resources/view/clustering/Hierarchical.fxml
+++ b/src/main/resources/view/clustering/Hierarchical.fxml
@@ -19,7 +19,7 @@
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.HierarchicalController">
    <top>
-      <GridPane hgap="10.0" vgap="10.0" BorderPane.alignment="CENTER">
+      <GridPane hgap="10.0" vgap="5.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="NEVER" />
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -30,9 +30,9 @@
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <CheckBox fx:id="checkBoxGrades" mnemonicParsing="false" text="%tab.grades" GridPane.columnIndex="2" GridPane.rowIndex="1">
@@ -45,7 +45,10 @@
                   <Insets />
                </GridPane.margin>
             </CheckBox>
-            <Button mnemonicParsing="false" onAction="#executeClustering" text="%clustering.execute" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Button mnemonicParsing="false" onAction="#executeClustering" text="%clustering.execute" GridPane.columnIndex="4" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin></Button>
             <ChoiceBox fx:id="choiceBoxDistance" GridPane.columnIndex="1">
                <GridPane.margin>
                   <Insets />
@@ -63,9 +66,15 @@
             </Label>
             <ChoiceBox fx:id="choiceBoxLinkage" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Separator orientation="VERTICAL" prefHeight="200.0" GridPane.columnIndex="5" GridPane.rowSpan="2147483647" />
-            <Label text="%clustering.numberOfClusters" GridPane.columnIndex="6" />
+            <Label text="%clustering.numberOfClusters" GridPane.columnIndex="6">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin></Label>
             <Spinner fx:id="spinnerClusters" disable="true" editable="true" prefHeight="25.0" prefWidth="83.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-            <Button fx:id="buttonExecute" disable="true" mnemonicParsing="false" onAction="#executePartition" text="%clustering.execute" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <Button fx:id="buttonExecute" disable="true" mnemonicParsing="false" onAction="#executePartition" text="%clustering.execute" GridPane.columnIndex="6" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="10.0" />
+               </GridPane.margin></Button>
             <CheckComboBox fx:id="checkComboBoxLogs" showCheckedCount="true" title="%clustering.logTypes" GridPane.columnIndex="3">
                <GridPane.margin>
                   <Insets />
