--- a/src/main/resources/view/Visualization.fxml
+++ b/src/main/resources/view/Visualization.fxml
@@ -17,19 +17,19 @@
 
 <BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.controllers.VisualizationController">
    <center>
-      <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity">
+      <StackPane>
          <children>
             <WebView fx:id="webViewCharts" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
-            <BorderPane fx:id="borderPaneImage" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
+            <BorderPane fx:id="borderPaneImage" style="-fx-background-color: white;">
                <center>
-                  <ImageView pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                  <ImageView fitHeight="300.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                      <image>
                         <Image url="@../img/logo.png" />
                      </image>
                   </ImageView>
                </center>
                <bottom>
-                  <ProgressBar fx:id="progressBar" prefHeight="35.0" prefWidth="200.0" progress="0.0" BorderPane.alignment="TOP_CENTER" />
+                  <ProgressBar fx:id="progressBar" progress="0.0" BorderPane.alignment="TOP_CENTER" />
                </bottom>
             </BorderPane>
          </children>
